<resources>
    <string name="app_name">SmartBox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_edit_passcode">EditPasscodeActivity</string>
    <string name="smartlock">SmartLock</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="history">History</string>
    <string name="passcodes">Passcodes</string>
    <string name="users">Users</string>
    <string name="permanent">Permanent</string>
    <string name="temp">Temporary</string>
    <string name="one_time">OneTime</string>
    <string name="repeat">Repeat</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="username">Username</string>
    <string name="active_count">Active Smartbox</string>
    <string name="date_reg">Date Registered</string>
    <string name="phone_num">Phone Number</string>
    <string name="email">Email</string>
    <string name="passcode_name">Passcode Name</string>
    <string name="select_passcode_type">Select Passcode Type</string>
    <string name="permanent_description">Passcode is permanent by default</string>
    <string name="repeat_description">Repeated passcode repeats weekly</string>
    <string name="onetime_description">One-time passcode expires after first usage</string>
    <string name="temporary_description">Works over a period of time</string>
    <string name="reminder">Notify you when you forget to \nclose the Smartbox.</string>
</resources>
